# DoAnIoT

./: .env.example  .gitignore  DEPLOYMENT_AWS_EC2.md  DEPLOYMENT_LOCAL_SERVER.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  deploy.sh  docker-compose.yml  nginx.conf
Lamp_relay/: sdkconfig  sdkconfig.old
Lamp_relay/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
backend/: Dockerfile  pom.xml
backend/src/main/java/com/nguyenxuanviet/backend/: BackendApplication.java
backend/src/main/java/com/nguyenxuanviet/backend/config/: CacheConfig.java  DataInitializer.java  MqttConfig.java  SecurityConfig.java
backend/src/main/java/com/nguyenxuanviet/backend/controller/: AutomationController.java  DeviceController.java  PublicLampController.java  RoomController.java  TelemetryController.java  UserController.java
backend/src/main/java/com/nguyenxuanviet/backend/model/: Automation.java  Device.java  Room.java  (+2 more)
backend/src/main/resources/: application.properties
backend/src/main/resources/db/migration/: V1__migration.sql  V1_migration.sql  V2__create_automations.sql  V3__add_performance_indexes.sql
smart_home_web/: Dockerfile  README.md  package-lock.json  package.json
smart_home_web/public/: index.html
smart_home_web/src/: App.css  App.js
smart_home_web/src/components/: AutomationCard.js  DeviceCard.js  TelemetryHistory.js
smart_home_web/src/pages/: Automations.js  Dashboard.js
smart_home_web/src/services/: api.js
smart_home_web/src/styles/: AutomationCard.css  Automations.css  Dashboard.css  DeviceCard.css  TelemetryHistory.css
(+10 files in other folders)
